[gd_scene load_steps=17 format=3 uid="uid://4h460bne5u7f"]

[ext_resource type="PackedScene" uid="uid://dlr4otqmnons0" path="res://scenes/maps/simple_map.tscn" id="1_8plcj"]
[ext_resource type="Script" path="res://scripts/grid/game_board.gd" id="1_vh31t"]
[ext_resource type="PackedScene" uid="uid://do7s2uku0pow8" path="res://scenes/board/unit_overlay.tscn" id="1_vr0ko"]
[ext_resource type="PackedScene" uid="uid://tbrhyctmhvp8" path="res://scenes/cursor/cursor.tscn" id="2_gmj3x"]
[ext_resource type="PackedScene" uid="uid://da68yq5bufel" path="res://scenes/board/unit_path.tscn" id="3_0mccx"]
[ext_resource type="PackedScene" uid="uid://ddte67lcaqx7h" path="res://scenes/units/unit.tscn" id="3_b3en6"]
[ext_resource type="PackedScene" uid="uid://b0ngvt0074ppc" path="res://scenes/board/attack_range_layer.tscn" id="7_0gr43"]
[ext_resource type="Script" path="res://scripts/data structure/state_board_machine.gd" id="7_g0h7p"]
[ext_resource type="Script" path="res://scripts/attack_system/attack_info.gd" id="7_kojhc"]
[ext_resource type="Script" path="res://scripts/states/move_state.gd" id="8_o0qin"]
[ext_resource type="Resource" uid="uid://cdo5be0w2k463" path="res://datas/attacks/teste.tres" id="8_ymnkc"]
[ext_resource type="Script" path="res://scripts/grid/attack_range_layer.gd" id="10_6edya"]
[ext_resource type="Script" path="res://scripts/states/option_action_state.gd" id="12_gitay"]
[ext_resource type="Script" path="res://scripts/states/select_unit.gd" id="12_mpmtw"]
[ext_resource type="Script" path="res://scripts/states/attack_state.gd" id="13_e05yy"]
[ext_resource type="Script" path="res://scripts/data structure/board_state.gd" id="14_6cpnq"]

[node name="Game" type="Node2D"]

[node name="GameBoard" type="Node2D" parent="."]
script = ExtResource("1_vh31t")

[node name="SimpleMap" parent="GameBoard" instance=ExtResource("1_8plcj")]

[node name="UnitOverlay" parent="GameBoard" instance=ExtResource("1_vr0ko")]

[node name="UnitPath" parent="GameBoard" instance=ExtResource("3_0mccx")]

[node name="AttackRangeLayer" parent="GameBoard" instance=ExtResource("7_0gr43")]
script = ExtResource("10_6edya")

[node name="Cursor" parent="GameBoard" instance=ExtResource("2_gmj3x")]

[node name="Unit" parent="GameBoard" instance=ExtResource("3_b3en6")]
position = Vector2(210, 105)
move_range = 2
health = 1
attacks = Array[ExtResource("7_kojhc")]([ExtResource("8_ymnkc")])

[node name="Unit2" parent="GameBoard" instance=ExtResource("3_b3en6")]
position = Vector2(239, 105)
move_range = 2
health = 1
attacks = Array[ExtResource("7_kojhc")]([ExtResource("8_ymnkc")])

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("board", "initial_state")]
script = ExtResource("7_g0h7p")
board = NodePath("../GameBoard")
initial_state = NodePath("SelectUnit")

[node name="SelectUnit" type="Node" parent="StateMachine"]
script = ExtResource("12_mpmtw")

[node name="OptionActionState" type="Node" parent="StateMachine"]
script = ExtResource("12_gitay")

[node name="MoveState" type="Node" parent="StateMachine/OptionActionState"]
script = ExtResource("8_o0qin")

[node name="AttackState" type="Node" parent="StateMachine/OptionActionState"]
script = ExtResource("13_e05yy")

[node name="ConclusionActionState" type="Node" parent="StateMachine/OptionActionState"]
script = ExtResource("14_6cpnq")
